--- a/src/index.html
+++ b/src/index.html
@@ -1,213 +1,304 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Ocean's 82 Wave Demo</title>
-        <meta
-            name="Oceans 82 Bonus"
-            content="A clone of a repo with additional changes, specific to the Oceans 82 class"
-        />
-        <meta name="author" content="Oleg" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <style>
-            html,
-            body {
-                overflow: hidden;
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
 
-            #renderCanvas {
-                width: 100%;
-                height: 100%;
-                touch-action: none;
-            }
+<head>
+    <meta charset="utf-8" />
+    <title>Ocean's 82 Wave Demo</title>
+    <meta name="Oceans 82 Bonus" content="A clone of a repo with additional changes, specific to the Oceans 82 class" />
+    <meta name="author" content="Oleg" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        html,
+        body {
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
 
-            #radioPlayer {
-                position: fixed;
-                top: 20px;
-                left: 20px;
-                background: rgba(0, 0, 0, 0.7);
-                padding: 15px;
-                border-radius: 10px;
-                color: white;
-                z-index: 1000;
-                backdrop-filter: blur(5px);
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            }
+        #renderCanvas {
+            width: 100%;
+            height: 100%;
+            touch-action: none;
+        }
 
-            .radio-controls {
-                display: flex;
-                gap: 10px;
-                margin-top: 10px;
-            }
+        #radioPlayer {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 15px;
+            border-radius: 10px;
+            color: white;
+            z-index: 1000;
+            backdrop-filter: blur(5px);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
 
-            .radio-controls button {
-                background: #4CAF50;
-                border: none;
-                padding: 5px 10px;
-                border-radius: 5px;
-                color: white;
-                cursor: pointer;
-                transition: background 0.3s;
-            }
+        .radio-controls {
+            display: flex;
+            gap: 10px;
+            margin-top: 10px;
+        }
 
-            .radio-controls button:hover {
-                background: #45a049;
-            }
+        .radio-controls button {
+            background: #4CAF50;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            color: white;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
 
-            #songTitle {
-                margin: 0;
-                font-size: 14px;
-                margin-bottom: 5px;
-            }
+        .radio-controls button:hover {
+            background: #45a049;
+        }
 
-            .song-thumbnail {
-                width: 60px;
-                height: 60px;
-                border-radius: 8px;
-                object-fit: cover;
-                margin-right: 10px;
-            }
+        #songTitle {
+            margin: 0;
+            font-size: 14px;
+            margin-bottom: 5px;
+        }
 
-            .song-info {
-                flex: 1;
-            }
+        .song-thumbnail {
+            width: 60px;
+            height: 60px;
+            border-radius: 8px;
+            object-fit: cover;
+            margin-right: 10px;
+        }
 
-            .play-icon,
-            .pause-icon {
-                font-size: 16px;
-                cursor: pointer;
-            }
+        .song-info {
+            flex: 1;
+        }
 
-            .play-icon {
-                display: none;
-            }
+        .play-icon,
+        .pause-icon {
+            font-size: 16px;
+            cursor: pointer;
+        }
 
-            .pause-icon {
-                display: block;
-            }
+        .play-icon {
+            display: none;
+        }
 
-            #radioPlayer {
-                display: flex;
-                align-items: center;
-            }
+        .pause-icon {
+            display: block;
+        }
 
-            .radio-controls button i {
-                font-size: 14px;
-            }
+        #radioPlayer {
+            display: flex;
+            align-items: center;
+        }
 
-            .hidden {
-                display: none;
-            }
+        .radio-controls button i {
+            font-size: 14px;
+        }
 
-            .progress-bar {
-                margin: 10px 0;
-            }
+        .hidden {
+            display: none;
+        }
 
-            #seekSlider {
-                width: 100%;
-                margin: 5px 0;
-            }
+        .progress-bar {
+            margin: 10px 0;
+        }
 
-            .time-display {
-                display: flex;
-                justify-content: space-between;
-                font-size: 12px;
-                color: #ccc;
-            }
+        #seekSlider {
+            width: 100%;
+            margin: 5px 0;
+        }
 
-            #welcomeText {
-                position: fixed;
-                top: 20px;
-                left: 50%;
-                transform: translateX(-50%);
-                background: rgba(0, 0, 0, 0.7);
-                padding: 20px;
-                border-radius: 10px;
-                color: white;
-                z-index: 1000;
-                backdrop-filter: blur(5px);
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-                max-width: 600px;
-                text-align: center;
-                transition: all 0.3s ease;
-            }
+        .time-display {
+            display: flex;
+            justify-content: space-between;
+            font-size: 12px;
+            color: #ccc;
+        }
 
-            .welcome-header {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 15px;
-            }
+        #welcomeText {
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+            color: white;
+            z-index: 1000;
+            backdrop-filter: blur(5px);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            max-width: 600px;
+            text-align: center;
+            transition: all 0.3s ease;
+        }
 
-            .welcome-controls {
-                display: flex;
-                gap: 5px;
-            }
+        .welcome-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+        }
 
-            .welcome-controls button {
-                background: none;
-                border: none;
-                color: white;
-                cursor: pointer;
-                padding: 5px;
-                font-size: 14px;
-                opacity: 0.7;
-                transition: opacity 0.3s;
-            }
+        .welcome-controls {
+            display: flex;
+            gap: 5px;
+        }
 
-            .welcome-controls button:hover {
-                opacity: 1;
-            }
+        .welcome-controls button {
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
+            padding: 5px;
+            font-size: 14px;
+            opacity: 0.7;
+            transition: opacity 0.3s;
+        }
 
-            #welcomeText.minimized #welcomeDescription {
-                display: none;
-            }
+        .welcome-controls button:hover {
+            opacity: 1;
+        }
 
-            #welcomeText.minimized {
-                padding: 10px 20px;
-            }
+        #welcomeText.minimized #welcomeDescription {
+            display: none;
+        }
 
-        </style>
-    </head>
+        #welcomeText.minimized {
+            padding: 10px 20px;
+        }
 
-    <body>
-        <canvas id="renderCanvas" touch-action="none"></canvas>
-        <div id="radioPlayer">
-            <img id="songThumbnail" class="song-thumbnail" alt="Song thumbnail">
-            <div class="song-info">
-                <h3 id="songTitle">Ocean Radio</h3>
-                <div class="progress-bar">
-                    <input type="range" id="seekSlider" value="0" step="0.1">
-                    <div class="time-display">
-                        <span id="currentTime">0:00</span>
-                        <span id="duration">0:00</span>
-                    </div>
-                </div>
-                <div class="radio-controls">
-                    <button id="playPauseBtn">
-                        <i class="fas fa-play play-icon"></i>
-                        <i class="fas fa-pause pause-icon hidden"></i>
-                    </button>
-                    <button id="skipBtn">
-                        <i class="fas fa-forward"></i>
-                    </button>
+        #aiChat {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            width: 350px;
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
+            color: white;
+            z-index: 1000;
+            backdrop-filter: blur(5px);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .chat-header {
+            padding: 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .chat-container {
+            height: 400px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        #chatMessages {
+            flex: 1;
+            overflow-y: auto;
+            padding: 15px;
+        }
+
+        .chat-message {
+            margin-bottom: 10px;
+            padding: 8px 12px;
+            border-radius: 15px;
+            max-width: 80%;
+        }
+
+        .user-message {
+            background: #4CAF50;
+            margin-left: auto;
+        }
+
+        .bot-message {
+            background: rgba(255, 255, 255, 0.1);
+            margin-right: auto;
+        }
+
+        .chat-input-container {
+            padding: 15px;
+            display: flex;
+            gap: 10px;
+        }
+
+        #chatInput {
+            flex: 1;
+            background: rgba(255, 255, 255, 0.1);
+            border: none;
+            padding: 10px;
+            border-radius: 20px;
+            color: white;
+        }
+
+        #sendChat {
+            background: #4CAF50;
+            border: none;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+<body>
+    <canvas id="renderCanvas" touch-action="none"></canvas>
+    <div id="radioPlayer">
+        <img id="songThumbnail" class="song-thumbnail" alt="Song thumbnail">
+        <div class="song-info">
+            <h3 id="songTitle">Ocean Radio</h3>
+            <div class="progress-bar">
+                <input type="range" id="seekSlider" value="0" step="0.1">
+                <div class="time-display">
+                    <span id="currentTime">0:00</span>
+                    <span id="duration">0:00</span>
                 </div>
             </div>
-        </div>
-        <div id="welcomeText">
-            <div class="welcome-header">
-                <h1>Welcome to Oceans 82 Wave Generator</h1>
-                <div class="welcome-controls">
-                    <button id="minimizeWelcome"><i class="fas fa-minus"></i></button>
-                    <button id="closeWelcome"><i class="fas fa-times"></i></button>
-                </div>
+            <div class="radio-controls">
+                <button id="playPauseBtn">
+                    <i class="fas fa-play play-icon"></i>
+                    <i class="fas fa-pause pause-icon hidden"></i>
+                </button>
+                <button id="skipBtn">
+                    <i class="fas fa-forward"></i>
+                </button>
             </div>
-            <p id="welcomeDescription">Play around with the controls on the right while listening to the radio on the top left and enjoy yourself while you learn more about how different aspects of the wave affect how it looks in the ocean. Use F8 to show/hide the GUI (after you click anywhere in the rendering area to give focus to the canvas) and WASD to move. 
-            </p>
         </div>
-    </body>
+    </div>
+    <div id="welcomeText">
+        <div class="welcome-header">
+            <h1>Welcome to Oceans 82 Wave Generator</h1>
+            <div class="welcome-controls">
+                <button id="minimizeWelcome"><i class="fas fa-minus"></i></button>
+                <button id="closeWelcome"><i class="fas fa-times"></i></button>
+            </div>
+        </div>
+        <p id="welcomeDescription">Play around with the controls on the right while listening to the radio on the top
+            left and enjoy yourself while you learn more about how different aspects of the wave affect how it looks in
+            the ocean. Use F8 to show/hide the GUI (after you click anywhere in the rendering area to give focus to the
+            canvas) and WASD to move.
+        </p>
+    </div>
+    <div id="aiChat">
+        <div class="chat-header">
+            <h3>Ocean Wave Assistant</h3>
+            <button id="toggleChat"><i class="fas fa-chevron-down"></i></button>
+        </div>
+        <div class="chat-container">
+            <div id="chatMessages"></div>
+            <div class="chat-input-container">
+                <input type="text" id="chatInput" placeholder="Ask about waves or request changes...">
+                <button id="sendChat">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
